--- a/seesharp/seesharp.csproj
+++ b/seesharp/seesharp.csproj
@@ -64,6 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Brick.cs" />
+    <Compile Include="BrickEdit.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BrickEdit.Designer.cs">
+      <DependentUpon>BrickEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +79,10 @@
     <Compile Include="MyImage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="BrickEdit.resx">
+      <DependentUpon>BrickEdit.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
